<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="    用户名" />

        <EditText
            android:id="@+id/register_editUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textEmailAddress"
            android:text="@string/dummy_email" />

        <TextView
            android:id="@+id/register_password_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="    密码" />

        <EditText
            android:id="@+id/register_editPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:text="@string/dummy_password" />

        <TextView
            android:id="@+id/register_password_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="    确认密码" />

        <EditText
            android:id="@+id/register_editPassword_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:text="@string/dummy_password" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/register_btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/Success"
            custom:pb_textProgress="@string/Loading" />
    </LinearLayout>

</RelativeLayout>